frontend-deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"frontend","namespace":"ns-cxxiwxce"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"frontend"}},"template":{"metadata":{"labels":{"app":"frontend"}},"spec":{"containers":[{"image":"nginx:alpine","name":"frontend","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/usr/share/nginx/html","name":"html"},{"mountPath":"/etc/nginx/conf.d/default.conf","name":"nginx-config","subPath":"default.conf"} [...]
  creationTimestamp: "2025-11-10T19:56:28Z"
  generation: 9
  name: frontend
  namespace: ns-cxxiwxce
  resourceVersion: "5393067329"
  uid: d562991e-513a-4f84-9149-ad46aff2651f
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-10T21:44:09Z"
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: default.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: frontend-dist
        name: dist-data
      - emptyDir: {}
        name: html
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: nginx-config
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-11-10T19:56:28Z"
    lastUpdateTime: "2025-11-10T21:44:19Z"
    message: ReplicaSet "frontend-98f7d64bc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-11-10T22:26:23Z"
    lastUpdateTime: "2025-11-10T22:26:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 9
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
